--- a/app/index.html
+++ b/app/index.html
@@ -8,7 +8,8 @@
   </head>
   <body>
 
-    <h1>Hello World!</h1>
+    <h1>Hello World!!</h1>
+    <p>testing!</p>
 
     <script src="js/bundle.js"></script>
   </body>
