--- a/app/index.html
+++ b/app/index.html
@@ -7,7 +7,19 @@
     <link rel="stylesheet" href="css/app.css">
   </head>
   <body>
+    <div class="container">
+      <div class="row">
 
+        <div class="col-sm-12">
+          <div class="page">
+
+
+
+          </div>
+
+        </div>
+      </div>
+    </div>
 
 
     <script src="js/bundle.js"></script>
